# eb-adapters

./: README.md  llm.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pypi-smoke.yml
docs/: index.md
docs/adapters/: index.md  writing-your-own-adapter.md
docs/api/: base.md  catboost.md  lightgbm.md  prophet.md  statsmodels.md
src/eb_adapters/: __init__.py  base.py  catboost.py  lightgbm.py  prophet.py  statsmodels.py
src/eb_adapters/contracts/demand_panel/v1/qsr/: __init__.py  entity_usage_interval_panel.py
src/eb_adapters/models/: __init__.py  base.py  catboost.py  lightgbm.py  statsmodels.py  xgboost.py
src/eb_adapters/panels/: __init__.py  qsr.py
tests/: __init__.py
tests/adapters/: test_base.py  test_catboost.py  test_catboost_adapter.py  test_lightgbm.py  test_lightgbm_adapter.py  test_prophet.py  test_prophet_adapter.py  test_statsmodels.py  test_statsmodels_adapters.py
tests/contracts/demand_panel/v1/qsr/: test_entity_usage_interval_panel.py
tests/models/: test_base.py  test_catboost.py  test_lightgbm.py  test_prophet.py  test_statsmodels.py  test_xgboost.py
tests/panels/: test_qsr.py
tooling/: .coveragerc  .pre-commit-config.yaml  bandit.toml  check.py  llm.style.txt  pyrightconfig.json  ruff.toml
